<h5>3.04 RC 1   [2020-07-09]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.5
<hr>
- unqualified function references (mamba/goffy)
- cosmetics (goffy)
- deleted folder archive (goffy)
- added uuid and IP textbox field (mamba/goffy)
- fixed problem with missing empy.png (cesagonchu/goffy)
- fixed bug with mb_strtolower for dir creation (cesagonchu/goffy)

<h5>3.04 Alpha 1   [2020-06-12]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.5
<hr>
- fixed bugs in creation of more files (goffy)
- added possibility to add own files via more files (goffy)
- implementation new xoops_confirm (geekwright/goffy)
- fixed bug in creation of config files (goffy)
- implementation of experience from wgtransifex (mamba/goffy)
- fixed bug date in blocks (heyula/goffy)
- replaced strtotime by \DateTime::createFromFormat (goffy)
- creation of table components/links only if table is for user side (goffy)

<h5>3.03 Alpha 5   [2020-06-09]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.5
<hr>
- new alpha release (goffy)

<h5>3.03 Alpha 4   [2020-05-11]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.5
<hr>
- missing folder name  (mamba)
- changed date integer to 11 (mamba)
- fix removed extra comma in generated FormUploadImage code (mamba)
- added schema (mamba)
- renamed "handler" to "Handler" in generated code (heyula/mamba)
- removed call to include Helper.php file (mamba)
- fix copying logo file (mamba)
- fix missing include of notification tpl (goffy)
- added first missing templates for notifications (goffy)
- added notification broken event (goffy)
- added possibility to store/restore testdata of created module (goffy)
- switched to single editor selector (mamba/goffy)
- changed constants class into interface (zyspec/goffy)
- added next steps notification event (goffy)
- added notification event new, modify, approve (goffy)
- added yoda condition (goffy)
- editor admin/user (mamba/goffy)
- added check quality/inconsistences of module data before building (goffy)
- fixed bugs in comments handling (goffy)
- added notification comments (goffy)